// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step applies isActive prop correctly 1`] = `
<StyledStep
  $isActive={true}
  $isCompleted={false}
>
  <StyledIcon
    $isActive={true}
    $isCompleted={false}
  >
    <StyledInnerIcon />
  </StyledIcon>
  <StyledContentTail
    $isActive={true}
    $isCompleted={false}
  />
  <StyledContent
    $isActive={true}
    $isCompleted={false}
  >
    <StyledContentTitle
      $isActive={true}
      $isCompleted={false}
    />
    <StyledContentDescription />
  </StyledContent>
</StyledStep>
`;

exports[`Step applies isCompleted prop correctly 1`] = `
<StyledStep
  $isActive={false}
  $isCompleted={true}
>
  <StyledIcon
    $isActive={false}
    $isCompleted={true}
  />
  <StyledContentTail
    $isActive={false}
    $isCompleted={true}
  />
  <StyledContent
    $isActive={false}
    $isCompleted={true}
  >
    <StyledContentTitle
      $isActive={false}
      $isCompleted={true}
    />
    <StyledContentDescription />
  </StyledContent>
</StyledStep>
`;

exports[`Step applies isLast prop correctly 1`] = `
<StyledStep
  $isActive={false}
  $isCompleted={false}
>
  <StyledIcon
    $isActive={false}
    $isCompleted={false}
  />
  <StyledContent
    $isActive={false}
    $isCompleted={false}
  >
    <StyledContentTitle
      $isActive={false}
      $isCompleted={false}
    />
    <StyledContentDescription />
  </StyledContent>
</StyledStep>
`;

exports[`Step applies title prop correctly 1`] = `
<StyledStep
  $isActive={false}
  $isCompleted={false}
>
  <StyledIcon
    $isActive={false}
    $isCompleted={false}
  />
  <StyledContentTail
    $isActive={false}
    $isCompleted={false}
  />
  <StyledContent
    $isActive={false}
    $isCompleted={false}
  >
    <StyledContentTitle
      $isActive={false}
      $isCompleted={false}
    >
      Test Title
    </StyledContentTitle>
    <StyledContentDescription />
  </StyledContent>
</StyledStep>
`;

exports[`Step renders children correctly if isActive is provided 1`] = `
<StyledStep
  $isActive={true}
  $isCompleted={false}
>
  <StyledIcon
    $isActive={true}
    $isCompleted={false}
  >
    <StyledInnerIcon />
  </StyledIcon>
  <StyledContentTail
    $isActive={true}
    $isCompleted={false}
  />
  <StyledContent
    $isActive={true}
    $isCompleted={false}
  >
    <StyledContentTitle
      $isActive={true}
      $isCompleted={false}
    />
    <StyledContentDescription>
      Content
    </StyledContentDescription>
  </StyledContent>
</StyledStep>
`;
